# pdman

./: .gitignore  README.md  TODO.md  download_manager.py  examples.py  pdm.py  pyproject.toml  requirements.txt  test_download_manager.py
src/pdm/: chunk.py  cli.py  downloader.py  manager.py  test.py
src/pdman/: __init__.py  chunk.py  cli.py  downloader.py  manager.py  utils.py
